--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                   <section>
                         <div class="box">
                               <figure>
-                                <img src="avatar-jessica.jpeg" alt="Portrait of a black woman posing with a serene expression against a neutral background" class="img">
+                                <img src="./assets/images/avatar-jessica.jpeg" alt="Portrait of a black woman posing with a serene expression against a neutral background" class="img">
                               </figure>
                                 <h2>Jessica Randall</h2>
                                 <p class="sub"> London, United Kingdom </p>
